# iserv-proxy

./: Interpreter.hs  Main.hs  README.mkd  iserv-proxy.cabal  local-example.sh
cbits/: symbols.aarch64-musl.c  symbols.aarch64-musl.h
src/IServ/Remote/: Interpreter.hs  Message.hs  Slave.hs
